2003-08-20  Richard Williamson   <rjw@apple.com>

	Fixed 3242508.  Japanese (and other non latin1 scripts) line breaking incorrect when mixed with latin1.

        Reviewed by Dave.

        * khtml/rendering/break_lines.cpp:

	Checkin fix for earlier bug that was already approved!

        * kwq/KWQKHTMLPart.mm:
        (KWQKHTMLPart::attributedString):

2003-08-19  David Hyatt  <hyatt@apple.com>

	Fixes for 3380766 and 3381867.  One is a table bug with amazon.com where colspans
	were losing percentage width values.  The other is a bug where floats aren't dirtying
	objects into which they intrude when doing layout.
	
        Reviewed by darin

        * khtml/rendering/render_block.cpp:
        * khtml/rendering/table_layout.cpp:
        (AutoTableLayout::calcEffectiveWidth):

2003-08-19  Chris Blumenberg  <cblu@apple.com>

	Fixed: <rdar://problem/3379336>: flash on front page of http://www.westportmotorsports.com is broken

        Reviewed by darin.

        * khtml/rendering/render_frames.cpp:
        (RenderPartObject::updateWidget): Ignore the PARAM tags and only use attributes inside the OBJECT tag when the EMBED tag is omitted.

2003-08-19  Darin Adler  <darin@apple.com>

        Reviewed by Dave.

        - fixed 3343681 -- clicking on a disabled submit button submits the form!

        This turned out to be a problem with code in dispatchGenericEvent that sent
        DOMActivate events even when the form element was disabled.

        * khtml/xml/dom_nodeimpl.h: Add virtual disabled() member function.
        * khtml/xml/dom_nodeimpl.cpp:
        (NodeImpl::dispatchGenericEvent): Don't send DOM activate events for disabled elements.
        (NodeImpl::handleLocalEvents): Don't send mouse events for disabled elements. But we do
        want those events to pass through the bubble and capture phases, just avoid triggering
        any listeners on this node itself.
        (NodeImpl::disabled): Added default implementation that returns false.
